istio-manifests/beer-app/networking/beer-app-v2_gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: beer-app-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beer-api
spec:
  hosts:
  - "*"
  gateways:
  - beer-app-gateway
  http:
  - match:
    - uri:
        regex: /.*
    route:
    - destination:
        host: beer-api-v2
        port:
          number: 5000
