istio-manifests/beer-app/networking/virtual-service-all-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beer-app-frontend
spec:
  hosts:
  - "*"
  gateways:
  - beer-app-frontend-gateway
  http:
  - route:
    - destination:
        host: beer-app-frontend
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beer-api
spec:
  hosts:
  - "*"
  gateways:
  - beer-app-gateway
  http:
  - route:
    - destination:
        host: beer-api
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details-api
spec:
  hosts:
  - details-api
  http:
  - route:
    - destination:
        host: details-api
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-api
spec:
  hosts:
  - reviews-api
  http:
  - route:
    - destination:
        host: reviews-api
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: likes-api
spec:
  hosts:
  - likes-api
  http:
  - route:
    - destination:
        host: likes-api
        subset: v1
---
