istio-manifests/beer-app/networking/virtual-service-beer-api-google.com-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beer-api
spec:
  hosts:
  - "*"
  gateways:
  - beer-app-gateway
  http:
  - match:
    - headers:
        x-email:
          regex: ".*@google.com"
      uri:
        regex: /openapi_spec*
      uri:
        prefix: /api
    route:
    - destination:
        host: beer-api
        subset: v2
  - match:
    - uri:
        regex: /openapi_spec*
    - uri:
        prefix: /api
    route:
    - destination:
        host: beer-api
        subset: v1
